--- a/README
+++ b/README
@@ -9,8 +9,8 @@ Linkedin:					http://es.linkedin.com/in/cesarvaliente
 
 
 -----------		QuiteSleep web pages	---------------------------------------
-QuiteSleep project in Google Code (svn repository):		https://code.google.com/p/quitesleep
-QuiteSleep discussion group:							http://groups.google.com/group/QuiteSleep
+QuiteSleep project in Google Code (mercurial repository):		https://code.google.com/p/quitesleep
+QuiteSleep discussion group:									http://groups.google.com/group/QuiteSleep
 
 -------------------------------------------------------------------------------
 
