Added ActionBarSherlock and viewPageIndicator functionality in all application (main and sub activities). Doesn't work lot of things regarding the functionality of the app, but it launchs ok, and the navigation using that two libraries is ok.

--- a/quitesleep_v3_branch/res/values-en/strings.xml
+++ b/quitesleep_v3_branch/res/values-en/strings.xml
@@ -192,8 +192,8 @@
     <!-- ##################		MENUS	#################################### -->
     
    <!-- @@@@@@@@@@	Menu Information	@@@@@@@@@@@@@@@@@@@@@@@@ -->
-   <string name="menu.information.about">About</string>
-   <string name="menu.information.help">Help</string>
+   <string name="menu_information_about">About</string>
+   <string name="menu_information_help">Help</string>
    
    <!-- @@@@@@@@@@@	Menu Add All	@@@@@@@@@@@@@@@@@@@@@@@@@ -->
    <string name="menu.addall.label">Add all contacts</string>
