Several changes: - Created new buttons to use along all the app. - Created new toggle buttons to use along all the app. - Included different assets, drawables and files used to customize the action bar. - Changes in several layouts using also style and dimen files. - Added GPL headers to the new files. - Changed the help and about me files with new info. - Changed CHANGES, and NOTICE files including new and updated info.

--- a/quitesleep_v3_branch/CHANGES
+++ b/quitesleep_v3_branch/CHANGES
@@ -1,6 +1,15 @@
 //---------------		QuiteSleep CHANGES and History		------------------//
 
-Last revision 27/02/2011
+Latest revision 06/05/2012
+
+06/05/2012
+QuiteSleep 3.0 released. Now QuiteSleep is adapted to the new times, using
+the latest design patterns for Android which started in Android 3.0.
+QuiteSleep uses ActionBar and ViewPager design patterns, fragments and
+customized buttons.
+
+November 2011
+Adapted contact list to make use of the fast navigation.
 
 02/01/2011 - 02/28/2011
 Developing QuiteSleep 2.0 with much more functionality in blocking types and the
